--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div>
     <!-- Navigas Sidepannel -->
   <div id="mySidepanel" class="fixed w-0 z-1 right-0 top-0 bg-off-white h-full overflow-hidden pt-20 pl-5 lg:invisible">
-    <a href="javascript:void(0)" class="absolute top-5 right-5" onclick="closeNav()"><img class="w-auto"  src="/assets/images/icon-menu-close.svg"></a>
+    <a href="javascript:void(0)" class="absolute top-5 right-5" onclick="closeNav()"><img class="w-auto"  src="./assets/images/icon-menu-close.svg"></a>
     <nav>
       <a class="block pb-5 text-xl" href="#">Home</a>
       <a class="block pb-5 mt-5 text-xl" href="#new">New</a>
@@ -27,8 +27,8 @@
 
 <!-- Logo dan Toggle Icon Navigasi -->
 <section class="grid grid-cols-6 mt-5 mb-5 lg:grid-cols-10 lg:justify-items-stretch">
-  <a href="#" class="col-start-1" ><img class="w-full md:w-full lg:w-auto" src="/assets/images/logo.svg" alt="logo w"></a>
-  <button onclick="openNav()" class="col-start-6 row-start-2"><img class="w-full lg:invisible" src="/assets/images/icon-menu.svg"></button>
+  <a href="#" class="col-start-1" ><img class="w-full md:w-full lg:w-auto" src="./assets/images/logo.svg" alt="logo w"></a>
+  <button onclick="openNav()" class="col-start-6 row-start-2"><img class="w-full lg:invisible" src="./assets/images/icon-menu.svg"></button>
     <a class="lg:text-xl lg:pt-6 lg:text-dark-grayish-blue sm:invisible md:invisible lg:visible lg:col-start-6 lg:row-start-1" href="#">Home</a>
     <a class="lg:text-xl lg:pt-6 lg:text-dark-grayish-blue sm:invisible md:invisible lg:visible lg:col-start-7 row-start-1" href="#">New</a>
     <a class="lg:text-xl lg:pt-6 lg:text-dark-grayish-blue sm:invisible md:invisible lg:visible lg:col-start-8 row-start-1" href="#">Popular</a>
@@ -40,7 +40,7 @@
   <main>
     <div class="mt-10 lg:grid lg:grid-cols-12 lg:grid-flow-col lg:gap-6">
       <div class="mb-10 lg:mb-0 lg:col-start-1 lg:col-span-8">
-        <img class="md:w-full lg:h-5/6" src="/assets/images/image-web-3-mobile.jpg" alt="gambar apa ya" />
+        <img class="md:w-full lg:h-5/6" src="./assets/images/image-web-3-mobile.jpg" alt="gambar apa ya" />
       </div>
       <div class="lg:row-start-2 lg:col-span-4">
         <header class="font-extrabold text-5xl text-very-dark-blue mt-5 md:text-6xl md:mb-5 lg:col-span-2 lg:row-span-2 lg:-mt-12">The Bright Future of Web 3.0?</header>
